some new additional updates to the frontend

--- a/src/main/resources/static/settingsTest.html
+++ b/src/main/resources/static/settingsTest.html
@@ -34,7 +34,9 @@
     </form>
 
 </section>
-
+<section class="barMagenta">
+    <img class="barMagentaImage" src="images/imagesTemplates/barMagentaLight.jpg">
+</section>
 
 <section class="devicesSection">
 
@@ -92,6 +94,13 @@
     </div>
 
 
+    <section class="barMagenta">
+        <img class="barMagentaImageReverse" src="images/imagesTemplates/barMagentaLight.jpg">
+        <footer>
+            <p> fefe</p>
+
+        </footer>
+    </section>
 
 </section>
 
